--- a/Public/all-Manager.html
+++ b/Public/all-Manager.html
@@ -147,6 +147,7 @@
                                     <li><a href="updateP-Manager.html">Update Property</a></li>
                                     <li><a href="addC-Manager.html">Add a Customer</a></li>
                                     <li><a href="updateC-Manager.html">Update Customer</a></li>
+                                    <li><a href="addD-manager.html">Close A Deal</a></li>
                                 </ul>
                         </li>
                     </ul>
