--- a/Public/blog-Customer.html
+++ b/Public/blog-Customer.html
@@ -152,6 +152,10 @@
 			
 			<div class="container">
                     <form id="feedbackForm" method="POST" action="/addFeedback">
+						<div class="form-group">
+							<label for="CustomerID">CustomerID:</label>
+							<input type="text" class="form-control" id="CustomerID" name="CustomerID" required>
+						</div>
                         <div class="form-group">
 								<label for="Name">Name:</label>
 								<input type="text" class="form-control" id="Name" name="Name" required>
@@ -319,7 +323,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 
 
-	document.addEventListener("DOMContentLoaded", function () {
+		document.addEventListener("DOMContentLoaded", function () {
     var form = document.getElementById("feedbackForm");
     form.addEventListener("submit", function (event) {
         event.preventDefault();
@@ -327,13 +331,8 @@ document.addEventListener("DOMContentLoaded", function () {
         var data = {};
         formData.forEach(function (value, key) {
             data[key] = value;
+		console.log(data);
         });
-
-        // הוספת בדיקה לדירוג
-        if (!data.rating) {
-            alert("Please select a rating before submitting.");
-            return;
-        }
 
         // Fetch feedback data
         fetch("/addFeedback", {
