Description of your changes

--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -50,7 +50,7 @@
 								<a>Assets</a>
 									<ul class="fh5co-sub-menu">
 										<li><a href="all-Manager.html">All</a></li>
-										<li><a href="filter-Manager.html">filter</a></li>
+										<li><a href="filter-Manager.html">Filter</a></li>
 									</ul>
 							</li>
 							<li><a href="users-Manager.html">Users</a></li>
@@ -62,7 +62,14 @@
 										<li><a href="updateP-Manager.html">Update Property</a></li>
 										<li><a href="addC-Manager.html">Add a Customer</a></li>
 										<li><a href="updateC-Manager.html">Update Customer</a></li>
-										<li><a href="addD-manager.html">Close A Deal</a></li>
+										<li><a href="addD-Manager.html">Close A Deal</a></li>
+									</ul>
+							</li>
+							<li>
+								<a>Meetings</a>
+									<ul class="fh5co-sub-menu">
+										<li><a href="meetingA-Manager.html">Add</a></li>
+										<li><a href="meetingV-Manager.html">View</a></li>
 									</ul>
 							</li>
 						</ul>
