--- a/Public/updateP-Manager.html
+++ b/Public/updateP-Manager.html
@@ -69,38 +69,45 @@
 <div id="fh5co-wrapper">
 <div id="fh5co-page">
 
-<header id="fh5co-header-section" class="sticky-banner">
-    <div class="container">
-        <div class="nav-header">
-            <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-            <h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
-            <nav id="fh5co-menu-wrap" role="navigation">
-                <ul class="sf-menu" id="fh5co-primary-menu">
-                    <li class="active"><a href="HomeManager.html">Home</a></li>
-                    <li>
-                        <a>Assets</a>
-                            <ul class="fh5co-sub-menu">
-                                <li><a href="all-Manager.html">All</a></li>
-                                <li><a href="filter-Manager.html">filter</a></li>
-                            </ul>
-                    </li>
-                    <li><a href="users-Manager.html">Users</a></li>
-                    <li><a href="blog-Manager.html">Blog</a></li>
-                    <li>
-                        <a>Activities</a>
-                            <ul class="fh5co-sub-menu">
-                                <li><a href="addP-Manager.html">Add Property</a></li>
-                                <li><a href="updateP-Manager.html">Update Property</a></li>
-                                <li><a href="addC-Manager.html">Add a Customer</a></li>
-                                <li><a href="updateC-Manager.html">Update Customer</a></li>
-                                <li><a href="addD-manager.html">Close A Deal</a></li>
-                            </ul>
-                    </li>
-                </ul>
-            </nav>
+    <header id="fh5co-header-section" class="sticky-banner">
+        <div class="container">
+            <div class="nav-header">
+                <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
+                <h1 id="fh5co-logo"><a href="HomeManager.html"><i class="icon-home"></i> Heh B’iyar <span> Real Estate</span></a></h1>
+                <nav id="fh5co-menu-wrap" role="navigation">
+                    <ul class="sf-menu" id="fh5co-primary-menu">
+                        <li class="active"><a href="HomeManager.html">Home</a></li>
+                        <li>
+                            <a>Assets</a>
+                                <ul class="fh5co-sub-menu">
+                                    <li><a href="all-Manager.html">All</a></li>
+                                    <li><a href="filter-Manager.html">Filter</a></li>
+                                </ul>
+                        </li>
+                        <li><a href="users-Manager.html">Users</a></li>
+                        <li><a href="blog-Manager.html">Blog</a></li>
+                        <li>
+                            <a>Activities</a>
+                                <ul class="fh5co-sub-menu">
+                                    <li><a href="addP-Manager.html">Add Property</a></li>
+                                    <li><a href="updateP-Manager.html">Update Property</a></li>
+                                    <li><a href="addC-Manager.html">Add a Customer</a></li>
+                                    <li><a href="updateC-Manager.html">Update Customer</a></li>
+                                    <li><a href="addD-Manager.html">Close A Deal</a></li>
+                                </ul>
+                        </li>
+                        <li>
+                            <a>Meetings</a>
+                                <ul class="fh5co-sub-menu">
+                                    <li><a href="meetingA-Manager.html">Add</a></li>
+                                    <li><a href="meetingV-Manager.html">View</a></li>
+                                </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
-</header>
+    </header>
 
     <aside id="fh5co-hero" class="js-fullheight">
         <div class="flexslider js-fullheight">
