Meetings by admin type user

--- a/Public/Home.html
+++ b/Public/Home.html
@@ -60,7 +60,7 @@
 							<li><a href="meeting-Customer.html">Meeting</a></li>
 							<li><a href="blog-Customer.html">Blog</a></li>
 							<li><a href="contact-Customer.html">Contact</a></li>
-							<li><a href="addC-Customer.html"> Add Customer</a></li>
+							<li><a href="addC-Customer.html">join</a></li>
 						</ul>
 					</nav>
 				</div>
