--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -618,7 +618,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="half-bg" style="background-image: url(images/cover_bg_2.jpg);"></div>
+			<div class="half-bg" style="background-image: url(images/loc.png);"></div>
 		</div>
 		<footer>
 			<div id="footer">
