--- a/Public/addC-Customer.html
+++ b/Public/addC-Customer.html
@@ -80,7 +80,7 @@
 								<li><a href="meeting-Customer.html">Meeting</a></li>
 								<li><a href="blog-Customer.html">Blog</a></li>
 								<li><a href="contact-Customer.html">Contact</a></li>
-								<li><a href=""> Add Customer</a></li>
+								<li><a href="">join</a></li>
 
 							</ul>
 						</nav>
