--- a/Public/contact-Customer.html
+++ b/Public/contact-Customer.html
@@ -83,7 +83,7 @@
 							<li><a href="meeting-Customer.html">Meeting</a></li>
 							<li><a href="blog-Customer.html">Blog</a></li>
 							<li class="active"><a href="contact-Customer.html">Contact</a></li>
-							<li><a href="addC-Customer.html"> Add Customer</a></li>
+							<li><a href="addC-Customer.html">join</a></li>
 						</ul>
 					</nav>
 				</div>
