--- a/Public/meetingA-Manager.html
+++ b/Public/meetingA-Manager.html
@@ -312,7 +312,28 @@ document.addEventListener("DOMContentLoaded", function() {
     }
 });
 
+document.addEventListener("DOMContentLoaded", function() {
+    var assetSelect = document.getElementById("assetSelect");
+    var assetSelectLabel = document.querySelector("label[for='assetSelect']");
 
+    // סימון שדה הבחירה בנכסים ותוויתו כבלתי גלויים בתחילת העמוד
+    assetSelect.style.display = "none";
+    assetSelectLabel.style.display = "none";
+
+    var meetingTypeSelect = document.getElementById("meetingType");
+
+    meetingTypeSelect.addEventListener("change", function() {
+        var selectedMeetingType = meetingTypeSelect.value;
+
+        if (selectedMeetingType === "Introduction Meeting" || selectedMeetingType === "Asset Search Meeting") {
+            assetSelect.style.display = "none";
+            assetSelectLabel.style.display = "none";
+        } else {
+            assetSelect.style.display = "block";
+            assetSelectLabel.style.display = "block";
+        }
+    });
+});
     </script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
